# arti-chat

./: Cargo.toml  README.md  developer-install.sh  microsoft-windows-install.md
.github/workflows/: ci.yml
arti-chat-daemon/: Cargo.toml  README.md
arti-chat-daemon-bin/: Cargo.toml  README.md
arti-chat-daemon-bin/resources/: com.arti-chat.daemon.plist  com.arti-chat.daemon.service
arti-chat-daemon-bin/src/: main.rs
arti-chat-daemon/src/: attachment.rs  client.rs  db.rs  error.rs  ipc.rs  lib.rs  message.rs  ratchet.rs  rpc.rs  session.rs  ui_focus.rs
arti-chat-desktop-app/: README.md  index.html  package-lock.json  package.json
arti-chat-desktop-app/src/: App.scss
arti-chat-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
arti-chat-desktop-app/src-tauri/icons/: icon.icns
arti-chat-desktop-app/src-tauri/src/: commands.rs  error.rs  ipc.rs  lib.rs  main.rs  model.rs  rpc.rs
arti-chat-desktop-app/src/app/: App.tsx
arti-chat-desktop-app/src/app/components/Action/: Action.scss  Action.tsx  ActionType.ts
arti-chat-desktop-app/src/app/components/Chat/: ChatInput.scss  ChatInput.tsx  ChatWindow.scss  ChatWindow.tsx  Message.scss  Message.tsx
arti-chat-desktop-app/src/app/components/ContactList/: ContactItem.scss  ContactItem.tsx  ContactList.scss  ContactList.tsx
arti-chat-desktop-app/src/app/components/Contacts/: ContactItem.scss  ContactItem.tsx  ContactList.scss  ContactList.tsx
arti-chat-desktop-app/src/app/components/LeftNav/: LeftNav.scss  LeftNav.tsx
arti-chat-desktop-app/src/app/components/Nav/: Nav.scss  Nav.tsx
arti-chat-desktop-app/src/app/components/forms/: FieldType.ts  Form.scss  Form.tsx  FormField.scss  FormField.tsx
arti-chat-desktop-app/src/app/components/forms/fields/: TextArea.tsx  TextInput.tsx
arti-chat-desktop-app/src/app/formDefinitions/: addContactForm.ts  updateContactForm.ts  updateUserForm.ts
arti-chat-desktop-app/src/app/hooks/: useChat.ts  useClient.ts  useContacts.ts  usePingDaemon.ts  usePingHiddenService.ts  useUser.ts
arti-chat-desktop-app/src/app/screens/AddContact/: AddContact.tsx
arti-chat-desktop-app/src/app/screens/ContactDetails/: ContactDetails.tsx
arti-chat-desktop-app/src/app/screens/Daemon/: Daemon.tsx
arti-chat-desktop-app/src/app/screens/Loading/: Loading.scss  Loading.tsx
arti-chat-desktop-app/src/app/screens/Settings/: Settings.tsx
arti-chat-desktop-app/src/app/screens/TorCircuit/: TorCircuit.tsx
arti-chat-desktop-app/src/app/screens/UserDetails/: UserDetails.scss  UserDetails.tsx
arti-chat-desktop-app/src/app/screens/Welcome/: Welcome.scss  Welcome.tsx
arti-chat-desktop-app/src/styles/: globals.scss  screens.scss
docs/: review-notes.md  security.md
screenshots/: README.md
