[package]
name = "arti-chat-daemon-bin"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["tor", "arti", "privacy", "anonymity", "chat", "messenger"]
description = "Binary wrapping daemon library for Arti Chat"
categories = ["chat", "messaging"]
repository = "https://github.com/NielDuysters/arti-chat.git"

[dependencies]
anyhow = "1.0.100"
arti-chat-daemon = { path = "../arti-chat-daemon" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
