[package]
name = "arti-chat-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
arti-client = { version =  "0.37.0", features = ["onion-service-client", "onion-service-service", "experimental-api"] }
async-trait = "0.1.89"
chrono = "0.4.42"
directories = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
futures = "0.3.31"
hex = "0.4.3"
keyring = { version = "3.6.3", features = ["apple-native", "linux-native"]}
once_cell = "1.21.3"
rand = "0.9.2"
rand_core = "0.6"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl"] }
safelog = "0.7.1"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"]}
tor-cell = "0.37.0"
tor-hsservice = "0.37.0"
tor-persist = "0.37.0"
tor-proto = "0.37.0"
tor-rtcompat = "0.37.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
