[package]
name = "arti-chat-daemon"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["tor", "arti", "privacy", "anonymity", "chat", "messenger"]
description = "Core logic for Arti Chat"
categories = ["chat", "messaging"]
repository = "https://github.com/NielDuysters/arti-chat.git"

[dependencies]
arti-client = { version =  "0.39.0", features = ["onion-service-client", "onion-service-service", "experimental-api"] }
async-trait = "0.1.89"
chacha20poly1305 = "0.10.1"
chrono = "0.4.42"
directories = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
futures = "0.3.31"
hex = "0.4.3"
hkdf = "0.12.4"
image = "0.25.9"
interprocess = { version = "2.2.3", features = ["tokio"] }
keyring = { version = "3.6.3", features = ["apple-native", "linux-native", "windows-native"] }
notify-rust = "4.11.7"
once_cell = "1.21.3"
rand = "0.9.2"
rand_core = "0.6"
rusqlite = { version = "0.38", features = ["bundled-sqlcipher-vendored-openssl"] }
safelog = "0.7.1"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"]}
tor-cell = "0.39.0"
tor-hsservice = "0.39.0"
tor-persist = "0.39.0"
tor-proto = "0.39.0"
tor-rtcompat = "0.39.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
x25519-dalek = "2.0.1"
zeroize = "1.8.2"
